--- a/index.html
+++ b/index.html
@@ -42,10 +42,33 @@
           <span class="nav-label">NFA</span>
         </a>
       </li>
-      <li><a href="pda-to-cfg.html">PDA → CFG</a></li>
-      <li><a href="cfl-to-cfg.html">CFL → CFG</a></li>
-      <li><a href="tm-to-fa.html">TM → FA</a></li>
-      <li><a href="dfa-minimizer.html">DFA Minimizer</a></li>
+      <li>
+        <a href="pda-to-cfg.html" class="nav-item-link">
+          <span class="nav-label">PDA</span>
+          <span class="nav-arrow">→</span>
+          <span class="nav-label">CFG</span>
+        </a>
+      </li>
+      <li>
+        <a href="cfl-to-cfg.html" class="nav-item-link">
+          <span class="nav-label">CFL</span>
+          <span class="nav-arrow">→</span>
+          <span class="nav-label">CFG</span>
+        </a>
+      </li>
+      <li>
+        <a href="tm-to-fa.html" class="nav-item-link">
+          <span class="nav-label">TM</span>
+          <span class="nav-arrow">→</span>
+          <span class="nav-label">FA</span>
+        </a>
+      </li>
+      <li>
+        <a href="dfa-minimizer.html" class="nav-item-link">
+          <span class="nav-label">DFA</span>
+          <span class="nav-label">Minimizer</span>
+        </a>
+      </li>
     </ul>
     <button id="theme-toggle" aria-label="Toggle theme"><span id="theme-icon">🌙</span></button>
   </nav>
@@ -108,4 +131,4 @@
     </span>
   </footer>
 </body>
-</html> 
+</html>
