--- a/nfa-to-dfa.html
+++ b/nfa-to-dfa.html
@@ -8,48 +8,71 @@
   <script src="js/theme.js" defer></script>
 </head>
 <body>
-  <nav class="navbar glass">
-    <div class="brand">
-      <span class="brand-title">Automata Visualizer Pro</span>
-    </div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li>
-        <a href="nfa-to-dfa.html" class="nav-item-link active">
-          <span class="nav-label">NFA</span>
-          <span class="nav-arrow">→</span>
-          <span class="nav-label">DFA</span>
-        </a>
-      </li>
-      <li>
-        <a href="enfa-to-dfa.html" class="nav-item-link">
-          <span class="nav-label">ε-NFA</span>
-          <span class="nav-arrow">→</span>
-          <span class="nav-label">DFA</span>
-        </a>
-      </li>
-      <li>
-        <a href="nfa-to-regex.html" class="nav-item-link">
-          <span class="nav-label">NFA</span>
-          <span class="nav-arrow">→</span>
-          <span class="nav-label">RegEx</span>
-        </a>
-      </li>
-      <li>
-        <a href="regex-to-nfa.html" class="nav-item-link">
-          <span class="nav-label">RegEx</span>
-          <span class="nav-arrow">→</span>
-          <span class="nav-label">NFA</span>
-        </a>
-      </li>
-     
-      <li><a href="pda-to-cfg.html">PDA → CFG</a></li>
-      <li><a href="cfl-to-cfg.html">CFL → CFG</a></li>
-      <li><a href="tm-to-fa.html">TM → FA</a></li>
-      <li><a href="dfa-minimizer.html">DFA Minimizer</a></li>
-    </ul>
-    <button id="theme-toggle" aria-label="Toggle theme"><span id="theme-icon">🌙</span></button>
-  </nav>
+  <!-- Use this for the nav section in all your HTML files -->
+<nav class="navbar glass">
+  <div class="brand">
+    <span class="brand-title">Automata Visualizer Pro</span>
+  </div>
+  <ul class="nav-links">
+    <li><a href="index.html" class="active">Home</a></li>
+    <li>
+      <a href="nfa-to-dfa.html" class="nav-item-link">
+        <span class="nav-label">NFA</span>
+        <span class="nav-arrow">→</span>
+        <span class="nav-label">DFA</span>
+      </a>
+    </li>
+    <li>
+      <a href="enfa-to-dfa.html" class="nav-item-link">
+        <span class="nav-label">ε-NFA</span>
+        <span class="nav-arrow">→</span>
+        <span class="nav-label">DFA</span>
+      </a>
+    </li>
+    <li>
+      <a href="nfa-to-regex.html" class="nav-item-link">
+        <span class="nav-label">NFA</span>
+        <span class="nav-arrow">→</span>
+        <span class="nav-label">RegEx</span>
+      </a>
+    </li>
+    <li>
+      <a href="regex-to-nfa.html" class="nav-item-link">
+        <span class="nav-label">RegEx</span>
+        <span class="nav-arrow">→</span>
+        <span class="nav-label">NFA</span>
+      </a>
+    </li>
+    <li>
+      <a href="pda-to-cfg.html" class="nav-item-link">
+        <span class="nav-label">PDA</span>
+        <span class="nav-arrow">→</span>
+        <span class="nav-label">CFG</span>
+      </a>
+    </li>
+    <li>
+      <a href="cfl-to-cfg.html" class="nav-item-link">
+        <span class="nav-label">CFL</span>
+        <span class="nav-arrow">→</span>
+        <span class="nav-label">CFG</span>
+      </a>
+    </li>
+    <li>
+      <a href="tm-to-fa.html" class="nav-item-link">
+        <span class="nav-label">TM</span>
+        <span class="nav-arrow">→</span>
+        <span class="nav-label">FA</span>
+      </a>
+    </li>
+    <li>
+      <a href="dfa-minimizer.html" class="nav-item-link">
+        <span class="nav-label">DFA</span>
+        <span class="nav-label">Minimizer</span>
+      </a>
+    </li>
+  </ul>
+  <button id="theme-toggle" aria-label="Toggle theme"><span id="theme-icon">🌙</span></button>
+</nav>
   <main>
     <section class="glass" style="max-width: 900px; margin: 2rem auto; padding: 2rem;">
       <h1 class="gradient" style="font-size:2rem; font-weight:bold;">NFA → DFA Converter</h1>
@@ -102,4 +125,4 @@
   <script src="js/visual-builder.js"></script>
   <script src="js/nfa-to-dfa.js"></script>
 </body>
-</html> 
+</html>
