--- a/nfa-to-regex.html
+++ b/nfa-to-regex.html
@@ -10,8 +10,9 @@
 <body>
   <!-- Use this for the nav section in all your HTML files -->
   <nav class="navbar glass">
+    <!-- Use this for the brand section in all navbars -->
     <div class="brand">
-      <span class="brand-title">Automata Visualizer Pro</span>
+      <a href="index.html" class="brand-title">Automata Visualizer Pro</a>
     </div>
     <ul class="nav-links">
       <li><a href="index.html" class="active">Home</a></li>
