--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar glass">
     <div class="brand">
-      <span class="brand-title">Automata Visualizer Pro</span>
+      <a href="index.html" class="brand-title">Automata Visualizer Pro</a>
     </div>
     <ul class="nav-links">
       <li><a href="index.html" class="active">Home</a></li>
